# tscale_sequence

./: Cargo.toml  README.md  README_CN.md
examples/: population.rs  star.rs
src/: lib.rs  tscale_rate.rs  tscale_sequence.rs
